--- a/Housing-site.html
+++ b/Housing-site.html
@@ -386,7 +386,7 @@
       // Posts storage and rendering
       const postsContainer = document.getElementById('postsContainer');
       const postForm = document.getElementById('postForm');
-      const PASSWORD = 'Ikinagagalak';
+      const PASSWORD = 'SMDC§45b4d6831fe!';
 
       // Load posts from localStorage
       function loadPosts() {
