--- a/Housing-site.html
+++ b/Housing-site.html
@@ -64,7 +64,7 @@
    <!-- Presentation Section -->
    <section class="mb-16 bg-white rounded-lg shadow-md p-6 md:p-10" id="presentation" lang="en">
     <h2 class="text-3xl font-extrabold text-red-700 mb-4">
-     Welcome to Leonora's Bahay
+     Welcome to Leonora's Bahay!
     </h2>
     <p class="text-gray-700 text-lg leading-relaxed mb-6">
      Discover your dream home in Santa Rosa City, Laguna with Leonora's
