--- a/Housing-site.html
+++ b/Housing-site.html
@@ -189,7 +189,7 @@
      </div>
      <div>
       <label class="block text-red-700 font-semibold mb-1" for="postImages">
-       Upload Images (1 to 3)
+       Upload Images (from 1 to 3)
       </label>
       <input accept="image/*" aria-describedby="imageHelp" capture="environment" class="w-full" id="postImages" multiple="" name="postImages" required="" type="file"/>
       <p class="text-sm text-gray-500 mt-1" id="imageHelp">
