--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header class="bg-white shadow-md sticky top-0 z-50">
    <div class="max-w-7xl mx-auto flex items-center justify-between p-4 md:p-6">
     <div class="flex items-center space-x-3">
-     <img alt="Philippine flag icon with red, blue, white, and yellow sun and stars" class="w-12 h-8 object-contain rounded-sm" draggable="false" height="32" src="https://storage.googleapis.com/a1aa/image/66c75d97-441e-42aa-d12b-7dab731e530f.jpg" width="48"/>
+     <img alt="Philippine flag icon with red, blue, white, and yellow sun and stars" class="w-12 h-8 object-contain rounded-sm" draggable="false" height="32" src="Papua's logo.png" width="48"/>
      <h1 class="text-2xl font-extrabold text-red-700 select-none">
       Leonora's Bahay
      </h1>
@@ -107,7 +107,7 @@
    <!-- Contact Section -->
    <section class="mb-16 bg-white rounded-lg shadow-md p-6 md:p-10 flex flex-col md:flex-row items-center justify-between gap-8" id="contact">
     <div class="flex items-center space-x-4">
-     <img alt="Philippine flag icon with red, blue, white, and yellow sun and stars" class="w-16 h-12 object-contain rounded-sm" draggable="false" height="64" src="https://storage.googleapis.com/a1aa/image/66c75d97-441e-42aa-d12b-7dab731e530f.jpg" width="64"/>
+     <img alt="Philippine flag icon with red, blue, white, and yellow sun and stars" class="w-16 h-12 object-contain rounded-sm" draggable="false" height="64" src="Papua's logo.png" width="64"/>
      <div>
       <h3 class="text-2xl font-extrabold text-red-700 mb-1">
        Contact Leonora's Bahay
