--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
         residence, Leonora's Bahay is here to help you find the perfect place to
         call your own.
     </p>
+    <p class="text-red-700 text-lg leading-relaxed">
+     (IF YOU DON'T SEE ANY POST AT ALL, CONTACT ME ON FACEBOOK, THAT MEANS THE WEBSITE HAS LITTLE SAVING ERRORS.)
+    </p>
    </section>
    <section class="mb-16 bg-white rounded-lg shadow-md p-6 md:p-10 hidden" id="presentation-fil" lang="fil">
     <h2 class="text-3xl font-extrabold text-red-700 mb-4">
@@ -93,6 +96,9 @@
      Kung naghahanap ka man ng maliit na bahay para sa panimula o maluwag na
         tirahan para sa pamilya, nandito ang Leonora's Bahay upang tulungan kang
         mahanap ang perpektong lugar na tatawaging tahanan.
+    </p>
+    <p class="text-red-700 text-lg leading-relaxed">
+     (KUNG WALA KAYONG MAKIKITA NA POST, CONTACT ME SA FACEBOOK, IBIG SABIHIN MAY MALIIT NA MGA ERRORS ANG WEBSITE.)
     </p>
    </section>
    <!-- Listings Section -->
